add master key env

--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -59,4 +59,5 @@ jobs:
           POSTGRES_PASSWORD: postgres
           PGPORT: ${{ job.services.postgres.ports[5432] }}
           RAILS_ENV: test
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         run: rspec
