--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,22 @@
 branch-defaults:
   master:
-    environment: null
+    environment: mentorship-platform-dev
     group_suffix: null
+environment-defaults:
+  MentorshipPlatformProduction-env:
+    branch: null
+    repository: null
 global:
+  application_name: mentorship-platform
+  branch: null
+  default_ec2_keyname: mentorship-platform-kp
+  default_platform: Multi-container Docker running on 64bit Amazon Linux
+  default_region: ap-southeast-1
+  include_git_submodules: true
+  instance_profile: null
+  platform_name: null
+  platform_version: null
   profile: eb-cli2
+  repository: null
+  sc: git
+  workspace_type: Application
