--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 /config/master.key
 .env
 *.pem
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
