--- a/.github/workflows/ecr.yml
+++ b/.github/workflows/ecr.yml
@@ -5,6 +5,9 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
+      - name: Teststep
+        run: |
+          ls && cat Dockerfile
       - uses: kciter/aws-ecr-action@master
         with:
           access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
